--- a/cart_page/cart_page.html
+++ b/cart_page/cart_page.html
@@ -7,17 +7,13 @@
     <title>Burger Hut | Cart</title>
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
-    <link
-      rel="stylesheet"
-      href="./../components/account_form/form.css"
-      type="text/css"
-    />
-    <link rel="stylesheet" href="./style.css" type="text/css" />
+    <link rel="stylesheet" href="./../components/account_form/form.css" type="text/css" />
+    <link rel="stylesheet" href="./cart_style.css" type="text/css" />
 
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
     <script src="./../components/account_form/country_code.js" defer></script>
-    <script src="./script.js" defer></script>
+    <script src="./cart_script.js" defer></script>
   </head>
 
   <body>
