fixed routes to be sementically correct

--- a/order_page/order_page.html
+++ b/order_page/order_page.html
@@ -15,7 +15,7 @@
     <script src="./../components/footer.js" defer></script>
   </head>
 
-  <body onload="getCategoryItems('Beef')">
+  <body>
     <div id="layout" class="layout">
       <a href="./../cart_page/cart_page.html" class="cart-btn primary-gradiant round">
         <img src="./../assets/icons/cart.png" alt="" />
