re-adjusted script tags and added food card animations

--- a/profile_page/profile.html
+++ b/profile_page/profile.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="./../components/account_form/form.css" type="text/css" />
     <link rel="stylesheet" href="./profile.css" type="text/css" />
 
-    <script src="./profile.js" defer></script>
-    <script src="./../components/account_form/country_code.js" defer></script>
-    <script src="./../components/account_form/date_of_birth.js" defer></script>
+    <script src="./../global.js" async></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
+    <script src="./../components/account_form/country_code.js" defer></script>
+    <script src="./../components/account_form/date_of_birth.js" defer></script>
+    <script src="./profile.js" defer></script>
   </head>
 
   <body>
