--- a/sign_in_page/sign_in.html
+++ b/sign_in_page/sign_in.html
@@ -14,9 +14,10 @@
     />
     <link rel="stylesheet" href="./sign_in_style.css" type="text/css" />
 
-    <script src="./connection_script.js" defer></script>
+    <script src="./../global.js" async></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
+    <script src="./connection_script.js" defer></script>
   </head>
 
   <body>
@@ -26,8 +27,8 @@
       <section class="auth">
         <h2>You can start ordering now</h2>
         <div class="buttons">
-          <a href="./sign_in_page.html" class="selected">Sign In</a>
-          <a href="./sign_up_page.html">Sign Up</a>
+          <a href="./sign_in.html" class="selected">Sign In</a>
+          <a href="./sign_up.html">Sign Up</a>
         </div>
 
         <form
