--- a/sign_in_page/sign_up.html
+++ b/sign_in_page/sign_up.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="./../components/account_form/form.css" type="text/css" />
     <link rel="stylesheet" href="./sign_in_style.css" type="text/css" />
 
+    <script src="./../global.js" async></script>
+    <script src="./../components/navbar.js" defer></script>
+    <script src="./../components/footer.js" defer></script>
     <script src="./../components/account_form/country_code.js" defer></script>
     <script src="./../components/account_form/date_of_birth.js" defer></script>
     <script src="./connection_script.js" defer></script>
-    <script src="./../components/navbar.js" defer></script>
-    <script src="./../components/footer.js" defer></script>
   </head>
 
   <body>
@@ -24,8 +25,8 @@
       <section class="register">
         <h2>Create Your Account</h2>
         <div class="buttons">
-          <a href="./sign_in_page.html">Sign In</a>
-          <a href="./sign_in_page.html" class="selected">Sign Up</a>
+          <a href="./sign_in.html">Sign In</a>
+          <a href="./sign_in.html" class="selected">Sign Up</a>
         </div>
 
         <form
