--- a/cart_page/cart.html
+++ b/cart_page/cart.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./../components/account_form/form.css" type="text/css" />
     <link rel="stylesheet" href="./cart_style.css" type="text/css" />
 
+    <script src="./../global.js" async></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
     <script src="./../components/account_form/country_code.js" defer></script>
