--- a/contact_page/contact.html
+++ b/contact_page/contact.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="./../global.css" type="text/css" />
     <link rel="stylesheet" href="./contact_style.css" type="text/css" />
 
-    <script src="./contact_script.js"></script>
+    <script src="./../global.js" async></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
+    <script src="./contact_script.js"></script>
   </head>
 
   <body>
