--- a/home_page/home.html
+++ b/home_page/home.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="./../global.css" type="text/css" />
     <link rel="stylesheet" href="./home_style.css" type="text/css" />
 
-    <script src="./slider_script.js" defer></script>
+    <script src="./../global.js" async></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
+    <script src="./slider_script.js" defer></script>
   </head>
 
   <body>
