--- a/order_history_page/order_history.html
+++ b/order_history_page/order_history.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./../global.css" type="text/css" />
     <link rel="stylesheet" href="./order_style.css" type="text/css" />
 
+    <script src="./../global.js" async></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
     <script src="./order_script.js"></script>
