--- a/order_page/order.html
+++ b/order_page/order.html
@@ -9,15 +9,16 @@
     <link rel="stylesheet" href="./../global.css" type="text/css" />
     <link rel="stylesheet" href="./order_style.css" type="text/css" />
 
-    <script src="./welcome_script.js" defer></script>
-    <script src="./order_script.js" defer></script>
+    <script src="./../global.js" async></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
+    <script src="./welcome_script.js" defer></script>
+    <script src="./order_script.js" defer></script>
   </head>
 
   <body>
     <div id="layout" class="layout">
-      <a id="cart-btn" href="./../cart_page/cart_page.html" class="cart-btn primary-gradiant round">
+      <a id="cart-btn" href="./../cart_page/cart.html" class="cart-btn primary-gradiant round">
         <img src="./../assets/icons/cart.png" alt="" />
         <span id="cart-btn-amount"></span>
       </a>
