--- a/cart_page/cart.html
+++ b/cart_page/cart.html
@@ -8,13 +8,13 @@
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
     <link rel="stylesheet" href="./../components/account_form/form.css" type="text/css" />
-    <link rel="stylesheet" href="./cart_style.css" type="text/css" />
+    <link rel="stylesheet" href="./cart.css" type="text/css" />
 
     <script src="./../global.js" async></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
     <script src="./../components/account_form/country_code.js" defer></script>
-    <script src="./cart_script.js" defer></script>
+    <script src="./cart.js" defer></script>
   </head>
 
   <body>
