--- a/contact_page/contact.html
+++ b/contact_page/contact.html
@@ -7,12 +7,13 @@
     <title>Burger Hut | Home</title>
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
-    <link rel="stylesheet" href="./contact_style.css" type="text/css" />
+    <link rel="stylesheet" href="./../components/account_form/form.css" type="text/css">
+    <link rel="stylesheet" href="./contact.css" type="text/css" />
 
     <script src="./../global.js" async></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
-    <script src="./contact_script.js"></script>
+    <script src="./contact.js"></script>
   </head>
 
   <body>
@@ -20,7 +21,7 @@
       <navbar-component></navbar-component>
 
       <main class="sm">
-        <form class="contact-form">
+        <form class="account-form">
           <h2>Get in touch with us !</h2>
 
           <div class="input-box">
