--- a/home_page/home.html
+++ b/home_page/home.html
@@ -7,12 +7,12 @@
     <title>Burger Hut | Home</title>
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
-    <link rel="stylesheet" href="./home_style.css" type="text/css" />
+    <link rel="stylesheet" href="./home.css" type="text/css" />
 
     <script src="./../global.js" async></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
-    <script src="./slider_script.js" defer></script>
+    <script src="./slider.js" defer></script>
   </head>
 
   <body>
