--- a/order_page/order.html
+++ b/order_page/order.html
@@ -7,13 +7,13 @@
     <title>Burger Hut | Order</title>
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
-    <link rel="stylesheet" href="./order_style.css" type="text/css" />
+    <link rel="stylesheet" href="./order.css" type="text/css" />
 
     <script src="./../global.js" async></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
     <script src="./welcome_script.js" defer></script>
-    <script src="./order_script.js" defer></script>
+    <script src="./order.js" defer></script>
   </head>
 
   <body>
