--- a/sign_in_page/sign_up.html
+++ b/sign_in_page/sign_up.html
@@ -8,14 +8,14 @@
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
     <link rel="stylesheet" href="./../components/account_form/form.css" type="text/css" />
-    <link rel="stylesheet" href="./sign_in_style.css" type="text/css" />
+    <link rel="stylesheet" href="./sign.css" type="text/css" />
 
     <script src="./../global.js" async></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
     <script src="./../components/account_form/country_code.js" defer></script>
     <script src="./../components/account_form/date_of_birth.js" defer></script>
-    <script src="./connection_script.js" defer></script>
+    <script src="./connection.js" defer></script>
   </head>
 
   <body>
