popup added for order page add to cart function

--- a/order_page/order.html
+++ b/order_page/order.html
@@ -12,6 +12,7 @@
     <script src="./../global.js" async></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
+    <script src="./../components/popup.js" defer></script>
     <script src="./welcome_script.js" defer></script>
     <script src="./order.js" defer></script>
   </head>
