--- a/profile_page/profile.html
+++ b/profile_page/profile.html
@@ -13,6 +13,7 @@
     <script src="./../global.js" async></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
+    <script src="./../components/popup.js" defer></script>
     <script src="./../components/account_form/country_code.js" defer></script>
     <script src="./../components/account_form/date_of_birth.js" defer></script>
     <script src="./profile.js" defer></script>
