--- a/cart_page/cart.html
+++ b/cart_page/cart.html
@@ -14,6 +14,7 @@
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
     <script src="./../components/account_form/country_code.js" defer></script>
+    <script src="./../components/popup.js" defer></script>
     <script src="./cart.js" defer></script>
   </head>
 
