added functional re-captcha to cart page

--- a/cart_page/cart.html
+++ b/cart_page/cart.html
@@ -16,6 +16,7 @@
     <script src="./../components/account_form/country_code.js" defer></script>
     <script src="./../components/popup.js" defer></script>
     <script src="./cart.js" defer></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </head>
 
   <body>
@@ -96,6 +97,7 @@
 
           <hr>
 
+          <div class="g-recaptcha" data-sitekey="6LcxBqEjAAAAAO26tLlRs6hmA2k8sH5rmWBrtubB"></div>
           <input class="type1" type="submit" value="Checkout">
         </form>
       </main>
