--- a/contact_page/contact.html
+++ b/contact_page/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./../components/account_form/form.css" type="text/css">
     <link rel="stylesheet" href="./contact.css" type="text/css" />
 
-    <script src="./../global.js" async></script>
+    <script src="./../global.js" defer></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
     <script src="./contact.js"></script>
