--- a/contact_page/contact.html
+++ b/contact_page/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Burger Hut | Home</title>
+    <title>Burger Hut | Contact</title>
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
     <link rel="stylesheet" href="./../components/account_form/form.css" type="text/css">
@@ -13,7 +13,7 @@
     <script src="./../global.js" defer></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
-    <script src="./contact.js"></script>
+    <script src="./contact.js" defer></script>
   </head>
 
   <body>
@@ -21,7 +21,7 @@
       <navbar-component></navbar-component>
 
       <main class="sm">
-        <form class="account-form">
+        <form onsubmit="sendEmail()" class="account-form">
           <h2>Get in touch with us !</h2>
 
           <div class="input-box">
