added validation on cart page when ordering

--- a/cart_page/cart.html
+++ b/cart_page/cart.html
@@ -58,7 +58,7 @@
               <div class="branch">
                 <p>Which branch are you ordering from ?</p>
                 <select name="branch" id="branch" required>
-                  <option selected disabled>Select a branch</option>
+                  <option selected disabled value="null">Select a branch</option>
                   <option value="1">Dekwaneh</option>
                   <option value="2">Sin El Fil</option>
                   <option value="3">Antelias</option>
