--- a/order_page/order.html
+++ b/order_page/order.html
@@ -14,6 +14,7 @@
     <script src="./../components/footer.js" defer></script>
     <script src="./../components/popup.js" defer></script>
     <script src="./welcome_script.js" defer></script>
+    <script src="./../components/item_card.js" defer></script>
     <script src="./order.js" defer></script>
   </head>
 
