favorite system fully functional

--- a/order_page/order.html
+++ b/order_page/order.html
@@ -15,6 +15,7 @@
     <script src="./../components/popup.js" defer></script>
     <script src="./welcome_script.js" defer></script>
     <script src="./../components/item_card.js" defer></script>
+    <script src="./../components/item_card_details.js" defer></script>
     <script src="./order.js" defer></script>
   </head>
 
