--- a/favorite_page/favorite.html
+++ b/favorite_page/favorite.html
@@ -14,6 +14,7 @@
     <script src="./../components/footer.js" defer></script>
     <script src="./../components/popup.js" defer></script>
     <script src="./../components/item_card.js" defer></script>
+    <script src="./../components/item_card_details.js" defer></script>
     <script src="./favorite.js" defer></script>
   </head>
 
