--- a/order_history_page/order_history.html
+++ b/order_history_page/order_history.html
@@ -12,7 +12,7 @@
     <script src="./../global.js" defer></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
-    <script src="./order_history.js"></script>
+    <script src="./order_history.js" defer></script>
   </head>
 
   <body>
