--- a/cart_page/cart.html
+++ b/cart_page/cart.html
@@ -65,6 +65,13 @@
                   <option value="4">Achrafieh</option>
                 </select>
               </div>
+
+              <div class="input-box">
+                <textarea class="style1" name="specialInstructions" id="specialInstructions"></textarea>
+                <span>Special Instructions</span>
+              </div>
+
+
             </div>
           </section>
 
