driver delivery functions fully functional

--- a/order_history_page/order_history.html
+++ b/order_history_page/order_history.html
@@ -20,7 +20,7 @@
       <navbar-component></navbar-component>
 
       <main class="order-history sm">
-        <button class="type1 full">Order Now</button>
+        <a class="type1 full" href="./../order_page/order.html">Order Now</a>
         <p class="title">Here are your latest orders</p>
         <div id="order-list" class="order-list"></div>
       </main>
