--- a/driver/orders_page/orders.html
+++ b/driver/orders_page/orders.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./../../global.css" type="text/css" />
     <link rel="stylesheet" href="./orders.css" type="text/css" />
 
-    <script src="./../../global.js" async></script>
+    <script src="./../../global.js" defer></script>
     <script src="./../../components/navbar.js" defer></script>
     <script src="./../../components/footer.js" defer></script>
     <script src="./../../components/popup.js" defer></script>
