--- a/home_page/home.html
+++ b/home_page/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/assets/logo_primary.png">
+    <link rel="icon" type="image/x-icon" href="/assets/logo_primary.png" />
     <title>Burger Hut | Home</title>
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
@@ -15,12 +15,7 @@
     <script src="./../components/footer.js" defer></script>
     <script src="./../components/popup.js" defer></script>
     <script src="./slider.js" defer></script>
-    <script defer>
-      function notImplemented() {
-        popup.setAttribute('status', 'error');
-        popup.setAttribute('text', `Sorry, this feature was not implemented !`);
-      }
-    </script>
+    <script src="./reviews.js" defer></script>
   </head>
 
   <body>
@@ -69,17 +64,13 @@
           <img src="./../assets/home/book_birthday.jpg" />
           <h2>Birthday Parties</h2>
           <p>Celebrate your birthday with us, and enjoy our birthday deals !</p>
-          <a href="./../contact_page/contact_page.html" class="type1"
-            >Book now</a
-          >
+          <a href="./../contact_page/contact_page.html" class="type1">Book now</a>
         </div>
         <div>
           <img src="./../assets/home/ask_question.jpg" />
           <h2>Our Food, Your Questions</h2>
           <p>Got any question ? We'd love to answer it !</p>
-          <a href="./../contact_page/contact_page.html" class="type1"
-            >Ask a question</a
-          >
+          <a href="./../contact_page/contact_page.html" class="type1">Ask a question</a>
         </div>
       </section>
 
@@ -90,8 +81,12 @@
             Download the Burger Hut App and start redeeming delicious offers.
           </p>
           <div>
-            <button onclick="notImplemented()"><img src="./../assets/home/app_store.png" /></button>
-            <button onclick="notImplemented()"><img src="./../assets/home/play_store.png" /></button>
+            <button onclick="notImplemented()">
+              <img src="./../assets/home/app_store.png" />
+            </button>
+            <button onclick="notImplemented()">
+              <img src="./../assets/home/play_store.png" />
+            </button>
           </div>
         </div>
       </section>
@@ -101,7 +96,16 @@
         <p>
           Send your us your CV, and we'll get back to you as soon as possible!
         </p>
-        <a class="type1" href="./../contact_page/contact_page.html">Apply Now</a>
+        <a class="type1" href="./../contact_page/contact_page.html"
+          >Apply Now</a
+        >
+      </section>
+
+      <section class="reviews">
+        <h2 class="title">What our customers say ?</h2>
+        <div class="reviews-list"></div>
+        <button class="scroll-btn scroll-left" id="scroll-left"></button>
+        <button class="scroll-btn scroll-right" id="scroll-right"></button>
       </section>
 
       <footer-component></footer-component>
