profile page address and edit account bugs fixed

--- a/home_page/home.html
+++ b/home_page/home.html
@@ -59,18 +59,35 @@
         </ul>
       </section>
 
+      <section class="about-us">
+        <iframe
+          src="https://www.youtube.com/embed/ESFJOylxAi8"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+        <div>
+          <h2 class="title">About the food you love</h2>
+          <p>Welcome to Burger Hut, the home of delicious, fast-food burgers! We have been serving up fresh, mouth-watering burgers to satisfied customers for years. Our burgers are made with only the highest quality ingredients, ensuring that every bite is bursting with flavor. In addition to our burgers, we also offer a wide variety of sides and drinks to complete your meal. Our friendly staff is always ready to welcome you with a smile and ensure that you have an enjoyable dining experience. So come on in to Burger Hut and treat yourself to a tasty burger today!</p>
+        </div>
+      </section>
+
       <section class="contact-us">
         <div>
           <img src="./../assets/home/book_birthday.jpg" />
           <h2>Birthday Parties</h2>
           <p>Celebrate your birthday with us, and enjoy our birthday deals !</p>
-          <a href="./../contact_page/contact_page.html" class="type1">Book now</a>
+          <a href="./../contact_page/contact_page.html" class="type1"
+            >Book now</a
+          >
         </div>
         <div>
           <img src="./../assets/home/ask_question.jpg" />
           <h2>Our Food, Your Questions</h2>
           <p>Got any question ? We'd love to answer it !</p>
-          <a href="./../contact_page/contact_page.html" class="type1">Ask a question</a>
+          <a href="./../contact_page/contact_page.html" class="type1"
+            >Ask a question</a
+          >
         </div>
       </section>
 
@@ -91,6 +108,13 @@
         </div>
       </section>
 
+      <section class="reviews">
+        <h2 class="title">What our customers say ?</h2>
+        <div class="reviews-list"></div>
+        <button class="scroll-btn scroll-left" id="scroll-left"></button>
+        <button class="scroll-btn scroll-right" id="scroll-right"></button>
+      </section>
+
       <section class="hiring">
         <h2>Looking for a work opportunity ?</h2>
         <p>
@@ -99,13 +123,6 @@
         <a class="type1" href="./../contact_page/contact_page.html"
           >Apply Now</a
         >
-      </section>
-
-      <section class="reviews">
-        <h2 class="title">What our customers say ?</h2>
-        <div class="reviews-list"></div>
-        <button class="scroll-btn scroll-left" id="scroll-left"></button>
-        <button class="scroll-btn scroll-right" id="scroll-right"></button>
       </section>
 
       <footer-component></footer-component>
