--- a/home_page/home.html
+++ b/home_page/home.html
@@ -14,6 +14,10 @@
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
     <script src="./../components/popup.js" defer></script>
+    <script src="./../components/spinner.js" defer></script>
+
+    <script src="https://www.youtube.com/iframe_api" defer></script>
+    <script src="./home.js" defer></script>
     <script src="./slider.js" defer></script>
     <script src="./reviews.js" defer></script>
   </head>
@@ -60,15 +64,32 @@
       </section>
 
       <section class="about-us">
-        <iframe
-          src="https://www.youtube.com/embed/ESFJOylxAi8"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <div class="video">
+          <iframe
+            id="player"
+            src="https://www.youtube.com/embed/ESFJOylxAi8"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+            onload="videoLoaded()"
+          >
+          </iframe>
+          <spinner-component></spinner-component>
+        </div>
+
         <div>
           <h2 class="title">About the food you love</h2>
-          <p>Welcome to Burger Hut, the home of delicious, fast-food burgers! We have been serving up fresh, mouth-watering burgers to satisfied customers for years. Our burgers are made with only the highest quality ingredients, ensuring that every bite is bursting with flavor. In addition to our burgers, we also offer a wide variety of sides and drinks to complete your meal. Our friendly staff is always ready to welcome you with a smile and ensure that you have an enjoyable dining experience. So come on in to Burger Hut and treat yourself to a tasty burger today!</p>
+          <p>
+            Welcome to Burger Hut, the home of delicious, fast-food burgers! We
+            have been serving up fresh, mouth-watering burgers to satisfied
+            customers for years. Our burgers are made with only the highest
+            quality ingredients, ensuring that every bite is bursting with
+            flavor. In addition to our burgers, we also offer a wide variety of
+            sides and drinks to complete your meal. Our friendly staff is always
+            ready to welcome you with a smile and ensure that you have an
+            enjoyable dining experience. So come on in to Burger Hut and treat
+            yourself to a tasty burger today!
+          </p>
         </div>
       </section>
 
