responsiveness and layout fixed - FAQ added

--- a/cart_page/cart.html
+++ b/cart_page/cart.html
@@ -27,21 +27,21 @@
       <main class="sm cart">
         <form class="account-form" onsubmit="order(event)">
           <section>
-            <h2>Your Cart</h2>
+            <h2 class="title">Your Cart</h2>
             <div id="cart-items" class="cart-items"></div>
           </section>
 
           <hr />
 
           <section>
-            <h2>Your Address</h2>
+            <h2 class="title">Your Address</h2>
             <div id="address-list" class="address-list"></div>
           </section>
 
           <hr />
 
           <section>
-            <h2>Extra Information</h2>
+            <h2 class="title">Extra Information</h2>
 
             <div class="extra-info">
               <div>
@@ -79,7 +79,7 @@
           <hr />
 
           <section>
-            <h2>Price</h2>
+            <h2 class="title">Price</h2>
             <div class="money">
               <div class="separate-costs">
                 <div>
