--- a/contact_page/contact.html
+++ b/contact_page/contact.html
@@ -34,9 +34,9 @@
         </p>
       </header>
 
-      <main class="sm">
+      <section class="sm" id="contact">
         <form onsubmit="sendEmail(event)" name="contact" class="account-form">
-          <h2>Get in touch with us !</h2>
+          <h2 class="title">Get in touch with us !</h2>
           <div class="input-box">
             <input
               class="style1"
@@ -69,7 +69,12 @@
 
           <input class="type1 full submit" type="submit" value="Send Message" />
         </form>
-      </main>
+      </section>
+
+      <section class="faq sm" id="faq">
+        <h2 class="title space">FAQ</h2>
+        <ul id="faq-list" class="faq-list"></ul>
+      </section>
 
       <footer-component></footer-component>
     </div>
