--- a/home_page/home.html
+++ b/home_page/home.html
@@ -78,7 +78,7 @@
         </div>
 
         <div>
-          <h2 class="title">About the food you love</h2>
+          <h2 class="title">About The Food You Love</h2>
           <p>
             Welcome to Burger Hut, the home of delicious, fast-food burgers! We
             have been serving up fresh, mouth-watering burgers to satisfied
@@ -130,7 +130,7 @@
       </section>
 
       <section class="reviews">
-        <h2 class="title">What our customers say ?</h2>
+        <h2 class="title">What Our Customers Say ?</h2>
         <div class="reviews-list"></div>
         <button class="scroll-btn scroll-left" id="scroll-left"></button>
         <button class="scroll-btn scroll-right" id="scroll-right"></button>
