--- a/order_page/order.html
+++ b/order_page/order.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" href="./../global.css" type="text/css" />
     <link rel="stylesheet" href="./order.css" type="text/css" />
 
-    <script src="./../global.js" async></script>
+    <script src="./../global.js" defer></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
     <script src="./../components/popup.js" defer></script>
+    <script src="./../components/spinner.js" defer></script>
+
     <script src="./welcome_script.js" defer></script>
     <script src="./../components/item_card.js" defer></script>
     <script src="./../components/item_card_details.js" defer></script>
