--- a/profile_page/profile.html
+++ b/profile_page/profile.html
@@ -27,7 +27,7 @@
 
       <main class="sm">
         <form id="account-details" onsubmit="updateInfo(event)" name="editProfile" class="account-form left-decoration">
-          <h2>Edit Account Details</h2>
+          <h2 class="title">Edit Account Details</h2>
           <div class="double-field">
             <div class="input-box">
               <input
