footer links fixed

--- a/home_page/home.html
+++ b/home_page/home.html
@@ -63,7 +63,7 @@
         </ul>
       </section>
 
-      <section class="about-us">
+      <section class="about-us" id="about-us">
         <div class="video">
           <iframe
             id="player"
@@ -129,14 +129,14 @@
         </div>
       </section>
 
-      <section class="reviews">
+      <section class="reviews" id="reviews">
         <h2 class="title">What Our Customers Say ?</h2>
         <div class="reviews-list"></div>
         <button class="scroll-btn scroll-left" id="scroll-left"></button>
         <button class="scroll-btn scroll-right" id="scroll-right"></button>
       </section>
 
-      <section class="hiring">
+      <section class="hiring" id="hiring">
         <h2>Looking for a work opportunity ?</h2>
         <p>
           Send your us your CV, and we'll get back to you as soon as possible!
